compiler/test_files/typing/bad/testfile-redef-4.psc

class S { i32 a; i32 a; };
i32 main() {}
